--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,12 +13,16 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
-    "react": "16.13.1",
+    "@unform/core": "^2.1.6",
+    "@unform/mobile": "^2.1.6",
+    "react": "17.0.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.2",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "@babel/runtime": "^7.8.4",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.7",
     "@types/styled-components-react-native": "^5.1.1",
