fix tsyring on linux

--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -2,7 +2,7 @@
   {
     "name": "default",
     "type": "postgres",
-    "host": "localhost",
+    "host": "app_db",
     "port": 5432,
     "username": "postgres",
     "password": "root",
