change .env api ip

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,6 @@
 APP_SECRET=5a57c4a4a4700ddc32a1fe4add013f6d
-APP_API_URL=http://localhost:3000
-APP_WEB_URL=http://localhost:5000
+APP_API_URL=http://192.168.0.70:3000
+APP_WEB_URL=http://192.168.0.70:5000
 
 MAIL_DRIVER=ethereal
 
